QA_Ipreo/src/objects/RAG_Status__c.object
<CustomObject>
    <fields>
        <fullName>Asset__c</fullName>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>RAG Statuses</relationshipLabel>
        <relationshipName>RAG_Statuses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RAG_Status__c</fullName>
        <label>RAG Status</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <label>RAG Status</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>RAG Status Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RAG Statuses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>